Fix top spacing of the WooCommerce Smart Checkout form.

--- a/assets/style.css
+++ b/assets/style.css
@@ -852,3 +852,7 @@ hr.blue {
     content:"\a";
     white-space: pre;
 }
+
+.wsc-inside {
+  top: 30px;
+}
